--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,68 @@
+@font-face {
+  font-family: "Helvetica Neue";
+  font-display: swap;
+  src: local("helvetica_neue"), url(../fonts/HelveticaNeue-Medium.ttf) format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Helvetica Neue Light";
+  font-display: swap;
+  src: local("helvetica_neue_light"), url(../fonts/HelveticaNeue-Light.otf) format("opentype");
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Helvetica Neue Bold";
+  font-display: swap;
+  src: local("helvetica_neue_bold"), url(../fonts/HelveticaNeue-Bold.ttf) format("truetype");
+  font-weight: 700;
+  font-style: bold;
+}
+@font-face {
+  font-family: "Bold";
+  src: url(../fonts/HelveticaNeue-Bold.ttf) format("truetype");
+}
+nav {
+  background-color: #000;
+  height: 40px;
+  color: #888888;
+  font-family: "helvetica_neue_bold", Arial, Helvetica, sans-serif;
+  font-weight: bold;
+}
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.navbar {
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  margin: 0 20vw;
+}
+
+.nav-logo {
+  width: 100px;
+  position: absolute;
+  top: 10px;
+  left: 50px;
+}
+.nav-logo img {
+  max-width: 100%;
+}
+
+nav button {
+  background-color: #d35266;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+}
+
+/* helper */
+.flex {
+  display: flex;
+}
 
 /*# sourceMappingURL=style.css.map */
