--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,63 +1,44 @@
-@font-face {
-    font-family: "Helvetica Neue";
-    font-display: swap;
-    src:
-      local("helvetica_neue"),
-      url(../fonts/HelveticaNeue-Medium.ttf) format("truetype");
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Helvetica Neue Light";
-    font-display: swap;
-    src:
-      local("helvetica_neue_light"),
-      url(../fonts/HelveticaNeue-Light.otf) format("opentype");
-    font-weight: 100;
-    font-style: normal;
-  }
-  
-  @font-face {
-    font-family: "Helvetica Neue Bold";
-    font-display: swap;
-    src:
-      local("helvetica_neue_bold"),
-      url(../fonts/HelveticaNeue-Bold.ttf) format("truetype");
-    font-weight: 700;
-    font-style: bold;
-  }
-
-  @font-face {
-    font-family: "Bold";
-    src: url(../fonts/HelveticaNeue-Bold.ttf)  format('truetype');
-  }
-
 $text-color: #888888;
 $nav-color: #383838;
 $website-color: #d35266;
-$normal-font: "Helvetica Neue", Arial, Helvetica, sans-serif;
-$light-font: "Helvetica Neue Light", Arial, Helvetica, sans-serif;
-$bold-font: "helvetica_neue_bold", Arial, Helvetica, sans-serif;
+$normal-font: "helvetica-neue", Arial, Helvetica, sans-serif;
+$light-font: "helvetica-light", Arial, Helvetica, sans-serif;
+$bold-font: "helvetica-bold", Arial, Helvetica, sans-serif;
+html {
+  color: $text-color;
+}
 nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: #000;
     height: 40px;
     color: $text-color;
     font-family: $bold-font;
-    font-weight: bold;
+    max-width: 100%;
 }
-
+main {
+  background-color: goldenrod;
+  height: 10000px;
+}
 a {
     color: inherit;
     text-decoration: none;
 }
+
+header {
+  max-width: 100%;
+  height: 45px;
+  justify-content: flex-end;
+}
+
 
 .navbar {
     justify-content: space-around;
     align-items: center;
     height: 100%;
     margin: 0 20vw;
-
 }
 
 .nav-logo {
@@ -71,17 +52,97 @@ a {
 }
 
 nav button {
-    background-color: $website-color;
-    border: none;
-    border-radius: 3px;
-    padding: 5px;
+  background-color: $website-color;
+  border: none;
+  border-radius: 3px;
+  padding: 5px;
+  font-family: $bold-font;
+  color: #fff;
+}
+
+.name-container {
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+  font-family: $normal-font;
+  img {
+    padding-top: 45px;
+    padding-bottom: 10px;
+  }
+}
+ 
+.search-container {
+  align-items: center;
+  padding-top: 25px;
+  flex-direction: column;
+  *{
+    margin-bottom: 10px;
+    max-width: 35vw;
+    min-width: 35vw;
+    height: 30px;
+    border-radius: 5px;
+    font-family: $light-font;
+  }
+}
+
+.header-drop-down,
+.header-input-text {
+  border: none;
+  margin-right: 1px;
+  color: $text-color;
+}
+
+.submit-button {
+  background-color: $nav-color;
+  color: $text-color;
 }
 
 
+/*test*/
 
+#topnav {
+  width: 100%;
+ 
 
+}
 
+#topnav #myLinks {
+  display: block;
+  // background-color: $website-color;
+  background: $website-color url(../images/header-background-logo.PNG);
+  background-size: 500px;
+  background-position: -112px 7px;
+  background-repeat: no-repeat;
+  height: 65vh;
+  position: fixed;
+  top: 40px;
+  left: 0;
+  right: 0;
+}
 
+#topnav a {
+  text-align: center;
+  position: fixed;
+  top: 0px;
+  right: 0;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  width: 45px;
+  height: 40px;
+}
+
+#topnav a.icon {
+  background: $website-color;
+  display: block;
+  font-size: 20px;
+}
+
+#collaps {
+  transform: rotate(180deg);
+  padding-bottom: 12px;
+}
 
 
 
