--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -18,10 +18,7 @@ nav {
     font-family: $bold-font;
     max-width: 100%;
 }
-main {
-  background-color: goldenrod;
   
-}
 a {
     color: inherit;
     text-decoration: none;
@@ -29,7 +26,7 @@ a {
 
 header {
   max-width: 100%;
-  height: 45px;
+  height: 40px;
   justify-content: flex-end;
 }
 
@@ -97,23 +94,18 @@ nav button {
   color: $text-color;
 }
 
-
-/*test*/
-
 #topnav {
   width: 100%;
- 
-
 }
 
 #topnav #myLinks {
   display: block;
-  // background-color: $website-color;
   background: $website-color url(../images/header-background-logo.PNG);
   background-size: 500px;
   background-position: -112px 7px;
   background-repeat: no-repeat;
   height: 65vh;
+  min-height: 377px;
   position: fixed;
   top: 40px;
   left: 0;
@@ -144,6 +136,16 @@ nav button {
   padding-bottom: 12px;
 }
 
+.slider {
+  max-width: 100%;
+  img {
+    width: 100px;
+  }
+}
+
+#hot-ads {
+  margin-top: 66vh;
+}
 
 
 /* helper */
