--- a/styles/style.css
+++ b/styles/style.css
@@ -14,11 +14,6 @@ nav {
   max-width: 100%;
 }
 
-main {
-  background-color: goldenrod;
-  height: 10000px;
-}
-
 a {
   color: inherit;
   text-decoration: none;
@@ -26,7 +21,7 @@ a {
 
 header {
   max-width: 100%;
-  height: 45px;
+  height: 40px;
   justify-content: flex-end;
 }
 
@@ -93,7 +88,6 @@ nav button {
   color: #888888;
 }
 
-/*test*/
 #topnav {
   width: 100%;
 }
@@ -105,6 +99,7 @@ nav button {
   background-position: -112px 7px;
   background-repeat: no-repeat;
   height: 65vh;
+  min-height: 377px;
   position: fixed;
   top: 40px;
   left: 0;
@@ -133,6 +128,17 @@ nav button {
 #collaps {
   transform: rotate(180deg);
   padding-bottom: 12px;
+}
+
+.slider {
+  max-width: 100%;
+}
+.slider img {
+  width: 100px;
+}
+
+#hot-ads {
+  margin-top: 66vh;
 }
 
 /* helper */
