added product section and hot ads section

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,7 @@ nav {
   color: #888888;
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
   max-width: 100%;
+  font-size: 10px;
 }
 
 a {
@@ -33,10 +34,10 @@ header {
 }
 
 .nav-logo {
-  width: 100px;
+  width: 80px;
   position: absolute;
-  top: 10px;
-  left: 50px;
+  top: 12px;
+  left: 5px;
 }
 .nav-logo img {
   max-width: 100%;
@@ -69,8 +70,8 @@ nav button {
 }
 .search-container * {
   margin-bottom: 10px;
-  max-width: 35vw;
-  min-width: 35vw;
+  max-width: 80vw;
+  min-width: 80vw;
   height: 30px;
   border-radius: 5px;
   font-family: "helvetica-light", Arial, Helvetica, sans-serif;
@@ -130,15 +131,73 @@ nav button {
   padding-bottom: 12px;
 }
 
+.hot-ads-header {
+  font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
+  margin-left: 5vw;
+}
+
 .slider {
   max-width: 100%;
 }
 .slider img {
-  width: 100px;
+  width: 150px;
+  margin-right: 15px;
 }
 
 #hot-ads {
   margin-top: 66vh;
+  color: #888888;
+  padding: 0 25px;
+}
+
+.ad-info {
+  max-width: 70%;
+  font-family: "helvetica-light", Arial, Helvetica, sans-serif;
+}
+.ad-info h3 {
+  color: #d35266;
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+  padding: 5px 0;
+}
+.ad-info div {
+  padding: 5px 0;
+  font-size: 10px;
+}
+
+.ad-info-buttons button {
+  padding: 5px 15px;
+  background-color: #d35266;
+  color: #fff;
+  font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
+  border: none;
+}
+
+.slider-content-container {
+  justify-content: center;
+}
+
+.product-section {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  gap: 10px;
+  padding: 10px 20px;
+}
+
+.product {
+  padding: 15px;
+  border: 1px solid #999999;
+  border-radius: 5px;
+}
+.product img {
+  max-width: 100%;
+}
+
+.section-header {
+  grid-column: 1/-1;
+}
+
+.product-price {
+  justify-content: space-between;
 }
 
 /* helper */
