--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -17,6 +17,7 @@ nav {
     color: $text-color;
     font-family: $bold-font;
     max-width: 100%;
+    font-size: 10px;
 }
   
 a {
@@ -39,10 +40,10 @@ header {
 }
 
 .nav-logo {
-    width: 100px;
+    width: 80px;
     position: absolute;
-    top: 10px;
-    left:50px;
+    top: 12px;
+    left: 5px;
     img{
         max-width: 100%;
     }
@@ -74,8 +75,8 @@ nav button {
   flex-direction: column;
   *{
     margin-bottom: 10px;
-    max-width: 35vw;
-    min-width: 35vw;
+    max-width: 80vw;
+    min-width: 80vw;
     height: 30px;
     border-radius: 5px;
     font-family: $light-font;
@@ -136,17 +137,74 @@ nav button {
   padding-bottom: 12px;
 }
 
+.hot-ads-header {
+  font-family: $normal-font;
+  margin-left: 5vw;
+}
+
 .slider {
   max-width: 100%;
   img {
-    width: 100px;
+    width: 150px;
+    margin-right: 15px;
   }
 }
 
 #hot-ads {
   margin-top: 66vh;
+  color: $text-color;
+  padding: 0 25px;
 }
 
+.ad-info {
+  max-width: 70%;
+  font-family: $light-font;
+  h3 {
+    color: $website-color;
+    font-family: $bold-font;
+    padding: 5px 0;
+  }
+  div {
+    padding: 5px 0;
+    font-size: 10px;
+  }
+}
+
+.ad-info-buttons button {
+  padding: 5px 15px;
+  background-color: $website-color;
+  color: #fff;
+  font-family: $normal-font;
+  border: none;
+}
+
+.slider-content-container {
+  justify-content: center;
+}
+
+.product-section {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  gap: 10px;
+  padding: 10px 20px;
+}
+
+.product{
+  padding: 15px;
+  border: 1px solid #999999;
+  border-radius: 5px;
+  img{
+    max-width: 100%;
+  }
+}
+
+.section-header {
+  grid-column: 1 / -1;
+}
+
+.product-price {
+  justify-content: space-between;
+}
 
 /* helper */
 .flex {display: flex;}
