--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ nav {
   background-color: #000;
   height: 40px;
   color: #888888;
-  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+  font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   max-width: 100%;
   font-size: 10px;
 }
@@ -24,6 +24,10 @@ header {
   max-width: 100%;
   height: 40px;
   justify-content: flex-end;
+}
+
+footer {
+  border-top: 1px solid #888888;
 }
 
 .navbar {
@@ -50,6 +54,17 @@ nav button {
   padding: 5px;
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
   color: #fff;
+}
+
+.nav-small-list {
+  position: absolute;
+  right: 50px;
+  top: 12px;
+}
+
+.user-name {
+  color: #fff;
+  margin-left: 20px;
 }
 
 .name-container {
@@ -82,6 +97,7 @@ nav button {
   border: none;
   margin-right: 1px;
   color: #888888;
+  background-color: #fff;
 }
 
 .submit-button {
@@ -134,6 +150,7 @@ nav button {
 .hot-ads-header {
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   margin-left: 5vw;
+  text-transform: uppercase;
 }
 
 .slider {
@@ -177,29 +194,231 @@ nav button {
 }
 
 .product-section {
+  background-color: #f0f0f0;
   display: grid;
   grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
   gap: 10px;
-  padding: 10px 20px;
+  padding: 25px 20px 10px 20px;
+  font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
+  color: #888888;
+  font-size: 12px;
 }
 
 .product {
   padding: 15px;
-  border: 1px solid #999999;
-  border-radius: 5px;
+  background-color: #fff;
+  border-radius: 10px;
 }
 .product img {
   max-width: 100%;
+  align-self: center;
+}
+.product a {
+  flex-direction: column;
+}
+
+.product-state {
+  color: #d35266;
+  padding: 5px 0;
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+}
+
+.product-location {
+  font-size: 10px;
+  padding-bottom: 5px;
 }
 
 .section-header {
   grid-column: 1/-1;
+  align-items: center;
+  padding: 0 20px 5px 20px;
+  border-bottom: 1px solid #cccccc;
+  background-color: #f0f0f0;
+}
+.section-header h2 {
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  margin-right: 5px;
+}
+.section-header p {
+  font-size: 12px;
+  color: #888888;
+}
+
+.product-price-section {
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+}
+.product-price-section button {
+  font-size: 15px;
 }
 
 .product-price {
-  justify-content: space-between;
+  color: #d35266;
 }
 
+.website-description {
+  margin: 20px 0;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
+  font-size: 10px;
+  color: #888888;
+}
+.website-description img {
+  max-width: 50%;
+  margin-bottom: 15px;
+}
+.website-description p {
+  max-width: 70%;
+}
+
+.footer-categories,
+.footer-navigation {
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+  color: #888888;
+  font-size: 15px;
+  margin: 0 15px;
+}
+.footer-categories h4,
+.footer-navigation h4 {
+  color: #d35266;
+  font-size: 20px;
+  border-bottom: 2px solid #d35266;
+  padding: 3px 0;
+}
+
+.footer-category-lists {
+  display: grid;
+  grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+  padding: 10px 0;
+}
+
+.footer-navigation-lists {
+  padding: 10px 0;
+}
+
+.footer-drop-down {
+  -webkit-appearance: none;
+  background-color: #fff;
+  text-align-last: center;
+  -moz-text-align-last: center;
+  -ms-text-align-last: center;
+  width: 40vw;
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+
+.parameter-container {
+  margin: 0 15px 15px 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #888888;
+}
+
+.parameter {
+  margin: 10px 0;
+  justify-content: space-between;
+  font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
+.parameter h4 {
+  color: #d35266;
+}
+
+.bottom-footer {
+  margin: 0 15px;
+}
+
+.copyright-text {
+  font-family: "helvetica-light", Arial, Helvetica, sans-serif;
+  color: #888888;
+  font-size: 12px;
+  justify-content: center;
+  text-align: center;
+}
+.copyright-text p {
+  max-width: 70vw;
+}
+
+.copyright-links {
+  justify-content: center;
+  color: #888888;
+  font-size: 30px;
+}
+.copyright-links li {
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  .extra-leaf,
+.nav-small-list-container {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  nav {
+    font-size: 16px;
+  }
+
+  .search-container {
+    justify-content: center;
+    padding-top: 95px;
+    flex-direction: row;
+  }
+  .search-container * {
+    margin-bottom: 10px;
+    max-width: 20vw;
+    min-width: 20vw;
+    height: 30px;
+    border-radius: 5px;
+    font-family: "helvetica-light", Arial, Helvetica, sans-serif;
+  }
+
+  .slider img {
+    width: 200px;
+  }
+
+  .ad-info div {
+    padding: 8px 0;
+    font-size: 14px;
+  }
+  .ad-info h3 {
+    font-size: 25px;
+  }
+
+  .product-section {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .product {
+    border-radius: 15px;
+    border: 1px solid #383838;
+  }
+
+  .hot-ads-header {
+    font-size: 20px;
+  }
+
+  .section-header {
+    margin-top: 30px;
+  }
+  .section-header h2 {
+    font-size: 20px;
+  }
+  .section-header p {
+    font-size: 14px;
+  }
+
+  .product a h3 {
+    font-size: 17px;
+  }
+  .product a p {
+    font-size: 14px;
+  }
+}
 /* helper */
 .flex {
   display: flex;
