--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -427,6 +427,14 @@ nav button {
       font-size: 14px
     }
   }
+
+  .product-price-section {
+    font-size: 30px;
+    button {
+      font-size: 20px;
+    }
+  }
+
 }
 
 
