--- a/styles/style.css
+++ b/styles/style.css
@@ -418,6 +418,13 @@ nav button {
   .product a p {
     font-size: 14px;
   }
+
+  .product-price-section {
+    font-size: 30px;
+  }
+  .product-price-section button {
+    font-size: 20px;
+  }
 }
 /* helper */
 .flex {
