--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -335,6 +335,7 @@ nav button {
 }
 
 .bottom-footer {
+  flex-direction: column;
   margin: 0 15px;
 }
 
@@ -433,6 +434,40 @@ nav button {
     button {
       font-size: 20px;
     }
+  }
+
+  .footer-container {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .footer-navigation {
+    font-size: 13px;
+  }
+
+  .parameter {
+    font-size: 17px;
+  }
+
+  .footer-drop-down {
+    width: 11vw;
+    font-size: 17px;
+  }
+
+  .parameter-container {
+    border: none;
+  }
+
+  .bottom-footer {
+    grid-column: span 4;
+    flex-direction: row;
+    border-top: 1px solid #888888;
+    justify-content: space-between;
+    align-items: center;
+  }
+   
+  .copyright-text {
+    font-size: 14px;
   }
 
 }
