--- a/styles/style.css
+++ b/styles/style.css
@@ -153,6 +153,7 @@ nav button {
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   margin-left: 5vw;
   text-transform: uppercase;
+  color: #888888;
 }
 
 .slider {
