--- a/styles/style.css
+++ b/styles/style.css
@@ -122,6 +122,7 @@ nav button {
   top: 40px;
   left: 0;
   right: 0;
+  z-index: 1;
 }
 
 #topnav a {
@@ -171,6 +172,7 @@ nav button {
 .hot-ads-container {
   color: #888888;
   padding: 0 25px;
+  margin: 0 0 30px 0;
 }
 
 .filter-container {
@@ -291,7 +293,7 @@ nav button {
 .section-header {
   grid-column: 1/-1;
   align-items: center;
-  padding: 0 20px 5px 20px;
+  padding: 5px 20px 5px 20px;
   border-bottom: 1px solid #cccccc;
   background-color: #f0f0f0;
 }
@@ -535,6 +537,24 @@ nav button {
     top: 50px;
   }
 }
+.carousel-cell {
+  width: 100%;
+  height: 200px;
+  margin-right: 10px;
+  border-radius: 5px;
+  counter-increment: carousel-cell;
+}
+
+/* cell number */
+.carousel-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(carousel-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
+
 /* helper */
 .flex {
   display: flex;
