replaced dummy images on the search page

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -278,7 +278,8 @@ nav button {
   border-radius: 10px;
   margin-bottom: 10px;
   img{
-    max-width: 100%;
+    width: 100%;
+    max-width: 350px;
     align-self: center;
   }
   a {
