changed the search results in the second viewport width to row view

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -470,6 +470,21 @@ nav button {
     border: 1px solid #383838;
   }
 
+  .product-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .product-description-container{
+    h3 {
+      font-size: 20px;
+    }
+    p {
+      font-size: 15px;
+    }
+  }
+
   .hot-ads-header {
     font-size: 20px;
   }
@@ -498,6 +513,12 @@ nav button {
     button {
       font-size: 20px;
     }
+  }
+
+  .product-price{
+    a {
+    font-size: 30px;
+  }
   }
 
   .footer-container {
