--- a/styles/style.css
+++ b/styles/style.css
@@ -48,6 +48,14 @@ footer {
   max-width: 100%;
 }
 
+.nav-leaf a:hover {
+  color: #d35266;
+}
+
+.messages:hover {
+  color: #d35266;
+}
+
 nav button {
   background-color: #d35266;
   border: none;
@@ -422,7 +430,7 @@ nav button {
     display: none;
   }
 }
-@media (min-width: 768px) {
+@media (min-width: 769px) {
   nav {
     font-size: 16px;
   }
