--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,29 @@
+@font-face {
+  font-family: "helvetica-neue";
+  font-display: swap;
+  src: local("helvetica_neue"), url(../styles/fonts/HelveticaNeue-Medium.ttf) format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "helvetica-light";
+  font-display: swap;
+  src: local("helvetica_neue_light"), url(../styles/fonts/HelveticaNeue-Light.otf) format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "helvetica-bold";
+  font-display: swap;
+  src: local("helvetica_neue_bold"), url(../styles/fonts/HelveticaNeue-Bold.ttf) format("truetype");
+  font-weight: 500;
+  font-style: bold;
+}
+
 html {
-  color: #888888;
+  color: #888;
 }
 
 nav {
@@ -9,7 +33,7 @@ nav {
   right: 0;
   background-color: #000;
   height: 40px;
-  color: #888888;
+  color: #888;
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   max-width: 100%;
   font-size: 10px;
@@ -28,7 +52,7 @@ header {
 }
 
 footer {
-  border-top: 1px solid #888888;
+  border-top: 1px solid #888;
 }
 
 .navbar {
@@ -44,12 +68,9 @@ footer {
   top: 12px;
   left: 5px;
 }
+
 .nav-logo img {
   max-width: 100%;
-}
-
-.nav-leaf a:hover {
-  color: #d35266;
 }
 
 .messages:hover {
@@ -82,6 +103,7 @@ nav button {
   color: #fff;
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
 }
+
 .name-container img {
   padding-top: 45px;
   padding-bottom: 10px;
@@ -92,6 +114,7 @@ nav button {
   padding-top: 25px;
   flex-direction: column;
 }
+
 .search-container * {
   margin-bottom: 10px;
   max-width: 80vw;
@@ -105,13 +128,13 @@ nav button {
 .header-input-text {
   border: none;
   margin-right: 1px;
-  color: #888888;
+  color: #888;
   background-color: #fff;
 }
 
 .submit-button {
   background-color: #383838;
-  color: #888888;
+  color: #888;
 }
 
 #topnav {
@@ -133,19 +156,6 @@ nav button {
   z-index: 1;
 }
 
-#topnav a {
-  text-align: center;
-  position: fixed;
-  top: 0px;
-  right: 0;
-  color: white;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-  width: 45px;
-  height: 40px;
-}
-
 #topnav a.icon {
   background: #d35266;
   display: block;
@@ -162,12 +172,13 @@ nav button {
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   margin-left: 5vw;
   text-transform: uppercase;
-  color: #888888;
+  color: #888;
 }
 
 .slider {
   max-width: 100%;
 }
+
 .slider img {
   width: 150px;
   margin-right: 15px;
@@ -178,14 +189,14 @@ nav button {
 }
 
 .hot-ads-container {
-  color: #888888;
+  color: #888;
   padding: 0 25px;
   margin: 0 0 30px 0;
 }
 
 .filter-container {
   padding: 0 10px;
-  border-bottom: 1px solid #888888;
+  border-bottom: 1px solid #888;
 }
 
 .filter-section {
@@ -198,7 +209,7 @@ nav button {
 .delivery-filter h3 {
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
   font-size: 15px;
-  border-bottom: 1px solid #888888;
+  border-bottom: 1px solid #888;
   margin: 10px 0;
 }
 
@@ -209,20 +220,22 @@ nav button {
 .result-count {
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   font-size: 10px;
-  color: #888888;
+  color: #888;
   padding: 15px;
-  border-bottom: 1px solid #888888;
+  border-bottom: 1px solid #888;
 }
 
 .ad-info {
   max-width: 70%;
   font-family: "helvetica-light", Arial, Helvetica, sans-serif;
 }
+
 .ad-info h3 {
   color: #d35266;
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
   padding: 5px 0;
 }
+
 .ad-info div {
   padding: 5px 0;
   font-size: 10px;
@@ -247,7 +260,7 @@ nav button {
   gap: 10px;
   padding: 25px 20px 10px 20px;
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
-  color: #888888;
+  color: #888;
   font-size: 12px;
 }
 
@@ -255,7 +268,7 @@ nav button {
   background-color: #f0f0f0;
   padding: 25px 20px 10px 20px;
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
-  color: #888888;
+  color: #888;
   font-size: 12px;
 }
 
@@ -264,10 +277,12 @@ nav button {
   background-color: #fff;
   border-radius: 10px;
 }
+
 .product img {
   max-width: 100%;
   align-self: center;
 }
+
 .product a {
   flex-direction: column;
 }
@@ -278,11 +293,13 @@ nav button {
   border-radius: 10px;
   margin-bottom: 10px;
 }
+
 .product-result img {
   width: 100%;
   max-width: 350px;
   align-self: center;
 }
+
 .product-result a {
   flex-direction: column;
 }
@@ -303,17 +320,19 @@ nav button {
   grid-column: 1/-1;
   align-items: center;
   padding: 5px 20px 5px 20px;
-  border-bottom: 1px solid #cccccc;
+  border-bottom: 1px solid #ccc;
   background-color: #f0f0f0;
 }
+
 .section-header h2 {
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
   font-size: 17px;
   margin-right: 5px;
 }
+
 .section-header p {
   font-size: 12px;
-  color: #888888;
+  color: #888;
 }
 
 .product-price-section {
@@ -322,6 +341,7 @@ nav button {
   font-size: 20px;
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
 }
+
 .product-price-section button {
   font-size: 15px;
 }
@@ -337,12 +357,14 @@ nav button {
   text-align: center;
   font-family: "helvetica-neue", Arial, Helvetica, sans-serif;
   font-size: 10px;
-  color: #888888;
+  color: #888;
 }
+
 .website-description img {
   max-width: 50%;
   margin-bottom: 15px;
 }
+
 .website-description p {
   max-width: 70%;
 }
@@ -350,10 +372,11 @@ nav button {
 .footer-categories,
 .footer-navigation {
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
-  color: #888888;
+  color: #888;
   font-size: 15px;
   margin: 0 15px;
 }
+
 .footer-categories h4,
 .footer-navigation h4 {
   color: #d35266;
@@ -386,7 +409,7 @@ nav button {
 .parameter-container {
   margin: 0 15px 15px 15px;
   padding-bottom: 15px;
-  border-bottom: 1px solid #888888;
+  border-bottom: 1px solid #888;
 }
 
 .parameter {
@@ -395,6 +418,7 @@ nav button {
   font-family: "helvetica-bold", Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+
 .parameter h4 {
   color: #d35266;
 }
@@ -406,30 +430,33 @@ nav button {
 
 .copyright-text {
   font-family: "helvetica-light", Arial, Helvetica, sans-serif;
-  color: #888888;
+  color: #888;
   font-size: 12px;
   justify-content: center;
   text-align: center;
 }
+
 .copyright-text p {
   max-width: 70vw;
 }
 
 .copyright-links {
   justify-content: center;
-  color: #888888;
+  color: #888;
   font-size: 30px;
 }
+
 .copyright-links li {
   padding: 10px;
 }
 
 @media (max-width: 768px) {
   .extra-leaf,
-.nav-small-list-container {
+  .nav-small-list-container {
     display: none;
   }
 }
+
 @media (min-width: 769px) {
   nav {
     font-size: 16px;
@@ -440,6 +467,7 @@ nav button {
     padding-top: 95px;
     flex-direction: row;
   }
+
   .search-container * {
     margin-bottom: 10px;
     max-width: 20vw;
@@ -457,6 +485,7 @@ nav button {
     padding: 8px 0;
     font-size: 14px;
   }
+
   .ad-info h3 {
     font-size: 25px;
   }
@@ -479,6 +508,7 @@ nav button {
   .product-description-container h3 {
     font-size: 20px;
   }
+
   .product-description-container p {
     font-size: 15px;
   }
@@ -490,9 +520,11 @@ nav button {
   .section-header {
     margin-top: 30px;
   }
+
   .section-header h2 {
     font-size: 20px;
   }
+
   .section-header p {
     font-size: 14px;
   }
@@ -500,6 +532,7 @@ nav button {
   .product a h3 {
     font-size: 17px;
   }
+
   .product a p {
     font-size: 14px;
   }
@@ -507,6 +540,7 @@ nav button {
   .product-price-section {
     font-size: 30px;
   }
+
   .product-price-section button {
     font-size: 20px;
   }
@@ -540,7 +574,7 @@ nav button {
   .bottom-footer {
     grid-column: span 4;
     flex-direction: row;
-    border-top: 1px solid #888888;
+    border-top: 1px solid #888;
     justify-content: space-between;
     align-items: center;
   }
@@ -563,6 +597,24 @@ nav button {
     top: 50px;
   }
 }
+
+.nav-leaf a:hover {
+  color: #d35266;
+}
+
+#topnav a {
+  text-align: center;
+  position: fixed;
+  top: 0;
+  right: 0;
+  color: white;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+  width: 45px;
+  height: 40px;
+}
+
 .carousel-cell {
   width: 100%;
   height: 200px;
@@ -572,7 +624,7 @@ nav button {
 }
 
 /* cell number */
-.carousel-cell:before {
+.carousel-cell::before {
   display: block;
   text-align: center;
   content: counter(carousel-cell);
@@ -585,5 +637,3 @@ nav button {
 .flex {
   display: flex;
 }
-
-/*# sourceMappingURL=style.css.map */
