--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -307,7 +307,7 @@ nav button {
   margin-bottom: 10px;
 
   img {
-    width: 100%;
+    width: 40%;
     max-width: 350px;
     align-self: center;
   }
@@ -511,12 +511,20 @@ nav button {
   .product {
     border-radius: 15px;
     border: 1px solid #383838;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .product-container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
+
+    a {
+      flex-direction: row;
+      align-items: center;
+    }
   }
 
   .product-description-container {
@@ -557,6 +565,8 @@ nav button {
 
   .product-price-section {
     font-size: 30px;
+    justify-content: space-around;
+    width: 100%;
 
     button {
       font-size: 20px;
